# FDE

./: solution  sum1.cpp  sum2.cpp  sum3.cpp  sum4.cpp
ex1/: rgba
ex2/tpchjoin/: README.md
ex2/tpchjoin/include/: util.hpp
ex2/tpchjoin/src/: main.cpp  sum.cpp
ex2/tpchjoin/test/: test_sum.cpp
ex3/tpchjoinoptimized/: .gitignore  CMakeLists.txt  README.md
ex3/tpchjoinoptimized/include/: sum.hpp
ex3/tpchjoinoptimized/src/: main.cpp  sum.cpp
ex3/tpchjoinoptimized/test/: test_sum.cpp
ex4/: ex4
ex4/tpchjoinparallel/: .gitlab-ci.yml  CMakeLists.txt  README.md
ex4/tpchjoinparallel/include/: sum.hpp
ex4/tpchjoinparallel/src/: main.cpp  sum.cpp
ex4/tpchjoinparallel/test/: test_sum.cpp
exercises/ex1/: ex1  mails_match.txt  name
exercises/ex2/: ex2
exercises/ex2/tpchj/: CMakeLists.txt
exercises/ex2/tpchj/include/: sum.hpp
